--- a/윈플텀프/윈플텀프/Properties/Resources.resx
+++ b/윈플텀프/윈플텀프/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="RedObject" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RedObject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Player2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Player2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
